--- a/android/src/app/components/location-tracker/location-tracker.html
+++ b/android/src/app/components/location-tracker/location-tracker.html
@@ -21,8 +21,7 @@
       <div class="position-info" *ngIf="currentPosition">
         <h3>📍 Current Location</h3>
         <div class="coordinates">
-          <p><strong>Latitude:</strong> {{ currentPosition.latitude | number:'1.6-6' }}</p>
-          <p><strong>Longitude:</strong> {{ currentPosition.longitude | number:'1.6-6' }}</p>
+          <p><strong>Address:</strong> {{ currentAddress || 'Address not available' }}</p>
           <p><strong>Accuracy:</strong> {{ currentPosition.accuracy | number:'1.0-0' }}m</p>
         </div>
         <button type="button" class="btn btn-secondary" (click)="openInMaps()">
